--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.12.4",
+    "@aws-amplify/core": "^6.11.4",
     "@tailwindcss/vite": "^4.1.4",
+    "amazon-cognito-identity-js": "^6.3.15",
     "aos": "^2.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
